force-app/main/default/objects/Reclamation__c/Reclamation__c.object-meta.xml
<CustomObject>
    <label>Reclamation</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reclamations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>