force-app/main/default/objects/Reclamation__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <description>Client</description>
    <label>Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>