force-app/main/default/objects/Reclamation__c/fields/AssignedBO_ID__c.field-meta.xml
<CustomField>
    <fullName>AssignedBO_ID__c</fullName>
    <label>AssignedBO_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>