force-app/main/default/objects/Reclamation__c/fields/BackOffice_Description__c.field-meta.xml
<CustomField>
    <fullName>BackOffice_Description__c</fullName>
    <label>BackOffice Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>