force-app/main/default/objects/Reclamation__c/fields/CompensationAmount__c.field-meta.xml
<CustomField>
    <fullName>CompensationAmount__c</fullName>
    <description>PAY_AMNT</description>
    <label>Compensation amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>