force-app/main/default/objects/Reclamation__c/fields/ContractNum__c.field-meta.xml
<CustomField>
    <fullName>ContractNum__c</fullName>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>