force-app/main/default/objects/Reclamation__c/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>