force-app/main/default/objects/Reclamation__c/fields/ERPSyncDate__c.field-meta.xml
<CustomField>
    <fullName>ERPSyncDate__c</fullName>
    <label>ERP Synchronize Date</label>
    <type>Date</type>
</CustomField>