force-app/main/default/objects/Reclamation__c/fields/ID_in_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_in_ERP__c</fullName>
    <externalId>true</externalId>
    <label>ID_in_ERP</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>