force-app/main/default/objects/Reclamation__c/fields/MarketSegment__c.field-meta.xml
<CustomField>
    <fullName>MarketSegment__c</fullName>
    <label>Market Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>