force-app/main/default/objects/Reclamation__c/fields/ReclSum__c.field-meta.xml
<CustomField>
    <fullName>ReclSum__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Reclamation Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>