force-app/main/default/objects/Reclamation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Sended</fullName>
            </value>
            <value>
                <fullName>_1</fullName>
                <label>Registered</label>
            </value>
            <value>
                <fullName>_2</fullName>
                <label>Is being considered</label>
            </value>
            <value>
                <fullName>_8</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>_9</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>_5</fullName>
                <label>Director decision</label>
            </value>
            <value>
                <fullName>Accepted_PendingCompensation</fullName>
                <label>Accepted  (pending compensation)</label>
            </value>
            <value>
                <fullName>AcceptedPartially_PendingCompensation</fullName>
                <label>Accepted partially (pending compensation)</label>
            </value>
            <value>
                <fullName>AcceptedPartially</fullName>
                <label>Accepted partially</label>
            </value>
            <value>
                <fullName>OnHold</fullName>
                <label>On Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>