force-app/main/default/objects/Reclamation__c/listViews/Test_List.listView-meta.xml
<ListView>
    <fullName>Test_List</fullName>
    <columns>NAME</columns>
    <columns>ERP_Number__c</columns>
    <columns>CreationDate__c</columns>
    <columns>Status__c</columns>
    <columns>ReclSum__c</columns>
    <columns>No_Refund__c</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ERPSyncDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Reclamation List</label>
</ListView>